--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.17.2",
+    "antd-img-crop": "^3.16.0",
     "axios": "^0.24.0",
+    "firebase": "^9.6.0",
     "npm": "^8.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
