--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "4.0.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
+    "uuidv4": "^6.2.12",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
