--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-stripe-checkout": "^2.6.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "uuidv4": "^6.2.12",
