--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-stripe-checkout": "^2.6.3",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "uuidv4": "^6.2.12",
